force-app/main/default/objects/CC_PlantillaAsociada__c/CC_PlantillaAsociada__c.object-meta.xml
<CustomObject>
    <description>Plantilla asociada a un objeto</description>
    <label>Plantilla asociada</label>
    <nameField>
        <displayFormat>NF-{0000000000}</displayFormat>
        <label>Plantilla</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plantillas asociadas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>