force-app/main/default/objects/CC_PlantillaAsociada__c/fields/CC_Agrupador__c.field-meta.xml
<CustomField>
    <fullName>CC_Agrupador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Agrupador asociado</description>
    <inlineHelpText>Agrupador asociado</inlineHelpText>
    <label>Agrupador</label>
    <referenceTo>CC_Agrupador__c</referenceTo>
    <relationshipLabel>Notificaciones cierre</relationshipLabel>
    <relationshipName>CC_AgrPlantillas</relationshipName>
    <type>Lookup</type>
</CustomField>