force-app/main/default/objects/CC_PlantillaAsociada__c/fields/CC_Canal__c.field-meta.xml
<CustomField>
    <fullName>CC_Canal__c</fullName>
    <description>Canal de comunicación</description>
    <inlineHelpText>Canal de comunicación</inlineHelpText>
    <label>Canal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CC_Canal</valueSetName>
    </valueSet>
</CustomField>