force-app/main/default/objects/CC_PlantillaAsociada__c/fields/CC_CuerpoNotificacion__c.field-meta.xml
<CustomField>
    <fullName>CC_CuerpoNotificacion__c</fullName>
    <description>Texto a incorporar en la notificación del cierre de la incidencia</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Texto a incorporar en la notificación del cierre de la incidencia</inlineHelpText>
    <label>Cuerpo notificación</label>
    <length>4000</length>
    <type>Html</type>
</CustomField>