force-app/main/default/objects/CC_PlantillaAsociada__c/fields/CC_Idioma__c.field-meta.xml
<CustomField>
    <fullName>CC_Idioma__c</fullName>
    <description>Idioma para la comunicación</description>
    <inlineHelpText>Idioma para la comunicación</inlineHelpText>
    <label>Idioma</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CC_Codigo_Idioma</valueSetName>
    </valueSet>
</CustomField>