force-app/main/default/objects/CC_PlantillaAsociada__c/fields/CC_PlantillaId__c.field-meta.xml
<CustomField>
    <fullName>CC_PlantillaId__c</fullName>
    <description>Identificador de la plantilla</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Identificador de la plantilla</inlineHelpText>
    <label>Plantilla ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>