force-app/main/default/objects/CC_PlantillaAsociada__c/fields/CC_Revisada__c.field-meta.xml
<CustomField>
    <fullName>CC_Revisada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revisada</label>
    <type>Checkbox</type>
</CustomField>