force-app/main/default/objects/CC_PlantillaAsociada__c/fields/CC_Tipo_Cliente__c.field-meta.xml
<CustomField>
    <fullName>CC_Tipo_Cliente__c</fullName>
    <label>Tipo Cliente</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente</fullName>
                <default>true</default>
                <label>Cliente</label>
            </value>
            <value>
                <fullName>Empleado</fullName>
            </value>
            <value>
                <fullName>Empleado Bankia</fullName>
            </value>
            <value>
                <fullName>Empleado (HDT)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>