force-app/main/default/objects/CC_PlantillaAsociada__c/recordTypes/CC_Agrupador.recordType-meta.xml
<RecordType>
    <fullName>CC_Agrupador</fullName>
    <active>true</active>
    <description>Plantillas de agrupadores</description>
    <label>Agrupador</label>
</RecordType>